Still fucking with it

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,8 @@
 FROM alpine:3.21.2 AS build
-RUN apk add --no-cache cargo=1.83.0-r0 rustup==1.25.2-r5
-RUN $HOME/.cargo/bin/rustup target add x86_64-unknown-linux-musl
+RUN apk add --no-cache curl
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --target x86_64-unknown-linux-musl
+ENV PATH=/root/.cargo/bin:$PATH
+RUN echo $PATH
 COPY Cargo.lock Cargo.toml .
 RUN mkdir src && echo 'fn main(){}' > src/main.rs
 RUN cargo build --release --target=x86_64-unknown-linux-musl
