Fuck it, we chef

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,18 @@
-FROM rust:1.84.1-alpine3.21 AS build
+FROM rust:1.84.1-alpine3.21 AS cargo-chef
 RUN apk add --no-cache musl-dev
+RUN cargo install cargo-chef
 WORKDIR /app
-COPY Cargo.lock Cargo.toml .
-RUN mkdir src && echo 'fn main(){println!("I shouldnt be in the final build!");}' > src/main.rs && touch --date '@0' src/main.rs src
-RUN cargo build --release --target=x86_64-unknown-linux-musl
+
+FROM cargo-chef AS planner
+COPY . .
+RUN cargo chef prepare --recipe-path recipe.json
+
+FROM cargo-chef AS builder
+COPY --from=planner /app/recipe.json recipe.json
+RUN cargo chef cook --release --target=x86_64-unknown-linux-musl --recipe-path recipe.json
 COPY . .
 RUN cargo build --release --target=x86_64-unknown-linux-musl
 
 FROM scratch
-COPY --from=build /app/target/x86_64-unknown-linux-musl/release/server /app
+COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/server /app
 CMD ["/app"]
