--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,3 +9,4 @@ chrono = "0.4.39"
 rouille = "3.6.2"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
+signal-hook = "0.3.17"
