--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.12.12", features = ["blocking", "json"] }
-openssl = { version = "0.10.68", features = ["vendored"] }
+reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls-webpki-roots"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 chrono = { version = "0.4.39", features = ["clock"] }
